@@ -63,7 +63,7 @@ jobs:
               full-deps: false
               install_hole: false
               codecov: false
-              numpy: numpy=1.20.0
+              numpy: numpy=1.21.0
             - name: asv_check
               os: ubuntu-latest
               python-version: 3.8
