@@ -25,7 +25,7 @@ jobs:
           PYTHON_VERSION: '3.8'
           PYTHON_ARCH: 'x86'
           BUILD_TYPE: 'normal'
-          NUMPY_MIN: '1.20.0'
+          NUMPY_MIN: '1.21.0'
           imageName: 'windows-2019'
         Win-Python38-64bit-full:
           PYTHON_VERSION: '3.8'
@@ -47,7 +47,7 @@ jobs:
           PYTHON_VERSION: '3.8'
           PYTHON_ARCH: 'x64'
           BUILD_TYPE: 'wheel'
-          NUMPY_MIN: '1.20.0'
+          NUMPY_MIN: '1.21.0'
           imageName: 'windows-2019'
         Linux-Python310-64bit-full-wheel:
           PYTHON_VERSION: '3.10'
@@ -59,7 +59,7 @@ jobs:
           PYTHON_VERSION: '3.8'
           PYTHON_ARCH: 'x64'
           BUILD_TYPE: 'wheel'
-          NUMPY_MIN: '1.20.0'
+          NUMPY_MIN: '1.21.0'
           imageName: 'ubuntu-latest'
   pool:
     vmImage: $(imageName)
